--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:19.1.0'
     compile 'com.android.support:mediarouter-v7:19.1.0'
     compile 'com.android.support:support-v13:19.1.0'
+    compile 'com.github.gabrielemariotti.cards:library:1.7.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Google Play Services
