--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "19.0.3"
 
     defaultConfig {
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.android.support:mediarouter-v7:19.1.0'
     compile 'com.android.support:support-v13:19.1.0'
     compile 'com.github.gabrielemariotti.cards:library:1.7.1'
+    compile 'com.github.gabrielemariotti.cards:library-extra:1.7.3'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Google Play Services
