--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
         <activity
             android:name="com.gmolabs.polterguide.app.MainActivity"
+            android:screenOrientation="reversePortrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +23,7 @@
         </activity>
 
         <activity android:name=".SetPreferenceActivity"
+            android:screenOrientation="reversePortrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
